# HN-Scraper

./: .gitignore  app.js  package.json  pnpm-lock.yaml
to_sql/: .gitignore  README.md  comments_table.sql  convert.py  make_dataset.py  post_table.sql  pyproject.toml  set_up_env_for_torch.ps1  stories_table.sql  test_query_builder.py
to_sql/notebooks/: datasets_playground.ipynb  transforms_playground.ipynb
