[tool.poetry]
name = "to-sql"
version = "0.1.0"
description = ""
authors = ["Peter Cappetto <peter.cappetto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pydantic = "^2.6.1"
typing-extensions = "^4.9.0"
pytest = "^8.0.1"
tqdm = "^4.66.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
bitsandbytes = "^0.42.0"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl", markers = "sys_platform == 'win32'" }
transformers = "^4.38.1"
datasets = "^2.17.1"
jupyterlab = "^4.1.2"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
